IBX-2520: Fix action buttons from the header overlapping with other things before adaptive items is initialized (#361)

--- a/src/bundle/Resources/public/scss/_header.scss
+++ b/src/bundle/Resources/public/scss/_header.scss
@@ -41,6 +41,12 @@
         min-height: calculateRem(64px);
     }
 
+    .ibexa-context-menu {
+        &--before-adaptive-items-init {
+            min-height: 0;
+        }
+    }
+
     .ibexa-header-wrapper {
         width: 100%;
     }
